# gitdorker

./: .env.example  .gitignore  CLAUDE.md  README.md  dorks.example.json  dorks.json  export_keys.py  project_plan.md  pyproject.toml  requirements.txt
gitdorker/: auth.py  cli.py  config.py  extractor.py  logger.py  models.py
gitdorker/api/: client.py  rate_limiter.py
gitdorker/output/: console.py  writer.py
gitdorker/searchers/: code.py  commits.py  repos.py
gitdorker/verifiers/: anthropic_verifier.py  gemini_verifier.py  github_verifier.py  openai_verifier.py  router.py
tests/: test_extractor.py  test_rate_limiter.py  test_searchers.py  test_verifiers.py  test_writer.py
ui/: package-lock.json  package.json  types.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/dorks/: route.ts
ui/app/api/run/: route.ts
ui/app/api/verify/: route.ts
ui/components/keys/: KeyRow.tsx  KeysTab.tsx  KeysToolbar.tsx
ui/components/terminal/: TerminalControls.tsx  TerminalTab.tsx
ui/components/verifier/: DropZone.tsx  ModelPills.tsx  ProviderBadge.tsx  ResultCard.tsx  VerifierTab.tsx
ui/lib/: callers.ts  dorks.ts  find-python.ts  placeholder.ts  providers.ts  storage.ts
web/: index.html
